--- a/Depo/Depo/Presentation/SubViews/CustomTabBars/PhotoVideo/PhotoVideoCell.xib
+++ b/Depo/Depo/Presentation/SubViews/CustomTabBars/PhotoVideo/PhotoVideoCell.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -44,27 +42,9 @@
                     </visualEffectView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b9W-7J-Q9j">
                         <rect key="frame" x="0.0" y="0.0" width="186" height="165"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5aj-uE-NFD">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="22" placeholderIntrinsicHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="5aj-uE-NFD">
                         <rect key="frame" x="160" y="4" width="22" height="22"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="22" id="1rc-lP-mHV"/>
-                            <constraint firstAttribute="height" constant="22" id="GDg-TA-bIU"/>
-                        </constraints>
-                    </imageView>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VhT-ZS-0Ab">
-                        <rect key="frame" x="0.0" y="145" width="186" height="20"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="20" id="9Y9-DM-xAV"/>
-                        </constraints>
-                    </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="D6a-f1-mPS">
-                        <rect key="frame" x="168" y="149" width="14" height="14"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="14" id="P7m-RR-XbT"/>
-                            <constraint firstAttribute="height" constant="14" id="ef2-ST-o1D"/>
-                        </constraints>
                     </imageView>
                     <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="favoriteStar" translatesAutoresizingMaskIntoConstraints="NO" id="2HJ-NZ-h8K">
                         <rect key="frame" x="4" y="4" width="13" height="12"/>
@@ -73,21 +53,22 @@
                             <constraint firstAttribute="height" constant="12" id="NZD-Y5-VIb"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Shs-Gd-W9e">
-                        <rect key="frame" x="21" y="142" width="161" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="YSE-Ts-Gvu"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="thumbnailPlay" translatesAutoresizingMaskIntoConstraints="NO" id="Vz7-W6-1DU">
-                        <rect key="frame" x="8" y="146" width="10" height="10"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="10" id="aDG-vi-hlz"/>
-                            <constraint firstAttribute="width" constant="10" id="bc1-yD-uZd"/>
-                        </constraints>
+                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="frx-wz-3n8">
+                        <rect key="frame" x="120.5" y="140" width="61.5" height="21"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Shs-Gd-W9e">
+                                <rect key="frame" x="0.0" y="0.5" width="41.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="14" placeholderIntrinsicHeight="21" translatesAutoresizingMaskIntoConstraints="NO" id="D6a-f1-mPS">
+                                <rect key="frame" x="47.5" y="0.0" width="14" height="21"/>
+                            </imageView>
+                        </subviews>
+                    </stackView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="25" placeholderIntrinsicHeight="25" translatesAutoresizingMaskIntoConstraints="NO" id="Vz7-W6-1DU">
+                        <rect key="frame" x="80.5" y="70" width="25" height="25"/>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rtp-Ce-5Aw">
                         <rect key="frame" x="0.0" y="0.0" width="186" height="165"/>
@@ -95,7 +76,6 @@
                     </view>
                 </subviews>
             </view>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
                 <constraint firstItem="TmD-it-Oee" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="0yg-35-CVW"/>
                 <constraint firstAttribute="trailing" secondItem="Rtp-Ce-5Aw" secondAttribute="trailing" id="2Zi-jd-uEz"/>
@@ -104,28 +84,22 @@
                 <constraint firstAttribute="bottom" secondItem="ha8-dW-lGP" secondAttribute="bottom" id="C3H-YY-Gqm"/>
                 <constraint firstItem="ha8-dW-lGP" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="EEt-cZ-Shh"/>
                 <constraint firstItem="2HJ-NZ-h8K" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="4" id="FSP-Og-aDz"/>
-                <constraint firstItem="VhT-ZS-0Ab" firstAttribute="trailing" secondItem="gTV-IL-0wX" secondAttribute="trailing" id="He5-ea-rgQ"/>
+                <constraint firstAttribute="bottom" secondItem="frx-wz-3n8" secondAttribute="bottom" constant="4" id="Fw1-hs-qJt"/>
                 <constraint firstItem="b9W-7J-Q9j" firstAttribute="trailing" secondItem="gTV-IL-0wX" secondAttribute="trailing" id="KmJ-VK-fsI"/>
                 <constraint firstItem="b9W-7J-Q9j" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Lbv-dD-HE1"/>
-                <constraint firstItem="Vz7-W6-1DU" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="OZ3-gm-3oy"/>
+                <constraint firstItem="Vz7-W6-1DU" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="LmH-qi-hX2"/>
                 <constraint firstAttribute="trailing" secondItem="TmD-it-Oee" secondAttribute="trailing" id="Pni-5e-TzX"/>
-                <constraint firstAttribute="leading" secondItem="VhT-ZS-0Ab" secondAttribute="leading" id="SiP-hI-JOe"/>
-                <constraint firstItem="Shs-Gd-W9e" firstAttribute="leading" secondItem="Vz7-W6-1DU" secondAttribute="trailing" constant="3" id="WOY-8m-Sxs"/>
+                <constraint firstItem="Vz7-W6-1DU" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="Sc8-XV-4DW"/>
                 <constraint firstItem="ha8-dW-lGP" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Wjh-Ca-gb9"/>
-                <constraint firstAttribute="bottom" secondItem="Vz7-W6-1DU" secondAttribute="bottom" constant="9" id="YeE-k6-ewQ"/>
                 <constraint firstAttribute="bottom" secondItem="Rtp-Ce-5Aw" secondAttribute="bottom" id="Z56-7g-0sw"/>
                 <constraint firstAttribute="leading" secondItem="b9W-7J-Q9j" secondAttribute="leading" id="aMh-VE-jPL"/>
                 <constraint firstItem="Rtp-Ce-5Aw" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="aX9-hc-XVH"/>
-                <constraint firstAttribute="bottom" secondItem="VhT-ZS-0Ab" secondAttribute="bottom" id="bYe-9E-XUH"/>
                 <constraint firstAttribute="trailing" secondItem="ha8-dW-lGP" secondAttribute="trailing" id="ckG-Z0-t0q"/>
                 <constraint firstItem="2HJ-NZ-h8K" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="4" id="dQr-O3-JyM"/>
                 <constraint firstAttribute="bottom" secondItem="TmD-it-Oee" secondAttribute="bottom" id="eUQ-SA-MOR"/>
-                <constraint firstItem="VhT-ZS-0Ab" firstAttribute="bottom" secondItem="D6a-f1-mPS" secondAttribute="bottom" constant="2" id="jtJ-qK-zSE"/>
-                <constraint firstAttribute="trailing" secondItem="Shs-Gd-W9e" secondAttribute="trailing" constant="4" id="phH-cH-E4t"/>
-                <constraint firstAttribute="trailing" secondItem="D6a-f1-mPS" secondAttribute="trailing" constant="4" id="sAk-zk-Usj"/>
+                <constraint firstAttribute="trailing" secondItem="frx-wz-3n8" secondAttribute="trailing" constant="4" id="rkb-48-FPT"/>
                 <constraint firstItem="Rtp-Ce-5Aw" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="u4p-Bn-JXS"/>
                 <constraint firstAttribute="trailing" secondItem="5aj-uE-NFD" secondAttribute="trailing" constant="4" id="wdI-YV-Gup"/>
-                <constraint firstAttribute="bottom" secondItem="Shs-Gd-W9e" secondAttribute="bottom" constant="2" id="wre-hI-VEJ"/>
                 <constraint firstItem="TmD-it-Oee" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="z4c-3Q-Cb5"/>
             </constraints>
             <size key="customSize" width="186" height="165"/>
@@ -133,7 +107,6 @@
                 <outlet property="bleachView" destination="b9W-7J-Q9j" id="BUG-BQ-Sh6"/>
                 <outlet property="checkmarkImageView" destination="5aj-uE-NFD" id="CSl-mz-aLF"/>
                 <outlet property="favoriteImageView" destination="2HJ-NZ-h8K" id="tjT-zV-keu"/>
-                <outlet property="gradientImageView" destination="VhT-ZS-0Ab" id="wvP-Yt-k2Z"/>
                 <outlet property="selectionStateView" destination="Rtp-Ce-5Aw" id="kXL-56-QJN"/>
                 <outlet property="syncStatusImageView" destination="D6a-f1-mPS" id="vnb-sw-Z4p"/>
                 <outlet property="thumbnailBlurVisualEffectView" destination="TmD-it-Oee" id="ruQ-8G-FCL"/>
@@ -146,9 +119,5 @@
     </objects>
     <resources>
         <image name="favoriteStar" width="13" height="12"/>
-        <image name="thumbnailPlay" width="11" height="11"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
