--- a/Depo/Depo/Presentation/UserStories/Others/LoginWithGooglePopup/LoginWithGooglePopup.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/LoginWithGooglePopup/LoginWithGooglePopup.xib
@@ -12,6 +12,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginWithGooglePopup" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="descriptionLabel" destination="Z6x-Bc-0EQ" id="tFp-4I-u50"/>
+                <outlet property="emailLabel" destination="wKb-e9-qMr" id="y5X-4B-Nuo"/>
                 <outlet property="popupView" destination="NCa-fh-IRO" id="xck-gx-S9d"/>
                 <outlet property="saveButton" destination="wek-gB-swQ" id="Pqf-oW-Kh2"/>
                 <outlet property="view" destination="Ao9-CO-fwg" id="87Z-OU-tQk"/>
@@ -23,13 +24,19 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NCa-fh-IRO">
-                    <rect key="frame" x="30" y="373" width="368" height="190.33333333333337"/>
+                    <rect key="frame" x="30" y="358.66666666666669" width="368" height="218.66666666666669"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="oz0-nQ-hqZ">
-                            <rect key="frame" x="16" y="40" width="336" height="20.333333333333329"/>
+                            <rect key="frame" x="16" y="40" width="336" height="48.666666666666657"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z6x-Bc-0EQ">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wKb-e9-qMr">
                                     <rect key="frame" x="0.0" y="0.0" width="336" height="20.333333333333332"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z6x-Bc-0EQ">
+                                    <rect key="frame" x="0.0" y="28.333333333333314" width="336" height="20.333333333333329"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
@@ -37,7 +44,7 @@
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="bae-x5-3Wf">
-                            <rect key="frame" x="84" y="100.33333333333331" width="200" height="50"/>
+                            <rect key="frame" x="84" y="128.66666666666663" width="200" height="50"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wek-gB-swQ" customClass="RoundedButton" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="0.0" width="200" height="50"/>
