--- a/Depo/Depo/Presentation/SubViews/CustomTabBars/PhotoVideo/PhotoVideoCell.xib
+++ b/Depo/Depo/Presentation/SubViews/CustomTabBars/PhotoVideo/PhotoVideoCell.xib
@@ -43,8 +43,13 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b9W-7J-Q9j">
                         <rect key="frame" x="0.0" y="0.0" width="186" height="165"/>
                     </view>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="22" placeholderIntrinsicHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="5aj-uE-NFD">
-                        <rect key="frame" x="160" y="4" width="22" height="22"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5aj-uE-NFD">
+                        <rect key="frame" x="150" y="8" width="28" height="28"/>
+                        <constraints>
+                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="28" id="UXP-ut-9AF"/>
+                            <constraint firstAttribute="width" secondItem="5aj-uE-NFD" secondAttribute="height" multiplier="1:1" id="VIz-Jl-5Vt"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="20" id="iGO-lQ-5oj"/>
+                        </constraints>
                     </imageView>
                     <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="favoriteStar" translatesAutoresizingMaskIntoConstraints="NO" id="2HJ-NZ-h8K">
                         <rect key="frame" x="4" y="4" width="13" height="12"/>
@@ -53,22 +58,21 @@
                             <constraint firstAttribute="height" constant="12" id="NZD-Y5-VIb"/>
                         </constraints>
                     </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="frx-wz-3n8">
-                        <rect key="frame" x="120.5" y="140" width="61.5" height="21"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Shs-Gd-W9e">
-                                <rect key="frame" x="0.0" y="0.5" width="41.5" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="14" placeholderIntrinsicHeight="21" translatesAutoresizingMaskIntoConstraints="NO" id="D6a-f1-mPS">
-                                <rect key="frame" x="47.5" y="0.0" width="14" height="21"/>
-                            </imageView>
-                        </subviews>
-                    </stackView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="25" placeholderIntrinsicHeight="25" translatesAutoresizingMaskIntoConstraints="NO" id="Vz7-W6-1DU">
-                        <rect key="frame" x="80.5" y="70" width="25" height="25"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Shs-Gd-W9e">
+                        <rect key="frame" x="4" y="140.5" width="41.5" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="20" placeholderIntrinsicHeight="16" translatesAutoresizingMaskIntoConstraints="NO" id="D6a-f1-mPS">
+                        <rect key="frame" x="162" y="145" width="20" height="16"/>
+                    </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Vz7-W6-1DU">
+                        <rect key="frame" x="79" y="68.5" width="28" height="28"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="Vz7-W6-1DU" secondAttribute="height" multiplier="1:1" id="Aqo-Su-WLH"/>
+                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="28" id="SWi-gZ-mLl"/>
+                        </constraints>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rtp-Ce-5Aw">
                         <rect key="frame" x="0.0" y="0.0" width="186" height="165"/>
@@ -79,27 +83,32 @@
             <constraints>
                 <constraint firstItem="TmD-it-Oee" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="0yg-35-CVW"/>
                 <constraint firstAttribute="trailing" secondItem="Rtp-Ce-5Aw" secondAttribute="trailing" id="2Zi-jd-uEz"/>
-                <constraint firstItem="5aj-uE-NFD" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="4" id="2dm-zn-67t"/>
+                <constraint firstItem="5aj-uE-NFD" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="2dm-zn-67t"/>
                 <constraint firstAttribute="bottom" secondItem="b9W-7J-Q9j" secondAttribute="bottom" id="3b5-a0-rqK"/>
+                <constraint firstItem="Shs-Gd-W9e" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="4" id="3cJ-nY-m3B"/>
+                <constraint firstItem="5aj-uE-NFD" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" multiplier="0.2" priority="999" id="4p0-aO-KCr"/>
                 <constraint firstAttribute="bottom" secondItem="ha8-dW-lGP" secondAttribute="bottom" id="C3H-YY-Gqm"/>
+                <constraint firstItem="Vz7-W6-1DU" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" multiplier="0.25" priority="999" id="DZZ-1T-s06"/>
                 <constraint firstItem="ha8-dW-lGP" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="EEt-cZ-Shh"/>
                 <constraint firstItem="2HJ-NZ-h8K" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="4" id="FSP-Og-aDz"/>
-                <constraint firstAttribute="bottom" secondItem="frx-wz-3n8" secondAttribute="bottom" constant="4" id="Fw1-hs-qJt"/>
                 <constraint firstItem="b9W-7J-Q9j" firstAttribute="trailing" secondItem="gTV-IL-0wX" secondAttribute="trailing" id="KmJ-VK-fsI"/>
                 <constraint firstItem="b9W-7J-Q9j" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Lbv-dD-HE1"/>
                 <constraint firstItem="Vz7-W6-1DU" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="LmH-qi-hX2"/>
                 <constraint firstAttribute="trailing" secondItem="TmD-it-Oee" secondAttribute="trailing" id="Pni-5e-TzX"/>
                 <constraint firstItem="Vz7-W6-1DU" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="Sc8-XV-4DW"/>
                 <constraint firstItem="ha8-dW-lGP" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Wjh-Ca-gb9"/>
+                <constraint firstAttribute="bottom" secondItem="Shs-Gd-W9e" secondAttribute="bottom" constant="4" id="YVZ-lm-et5"/>
                 <constraint firstAttribute="bottom" secondItem="Rtp-Ce-5Aw" secondAttribute="bottom" id="Z56-7g-0sw"/>
                 <constraint firstAttribute="leading" secondItem="b9W-7J-Q9j" secondAttribute="leading" id="aMh-VE-jPL"/>
                 <constraint firstItem="Rtp-Ce-5Aw" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="aX9-hc-XVH"/>
                 <constraint firstAttribute="trailing" secondItem="ha8-dW-lGP" secondAttribute="trailing" id="ckG-Z0-t0q"/>
                 <constraint firstItem="2HJ-NZ-h8K" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="4" id="dQr-O3-JyM"/>
                 <constraint firstAttribute="bottom" secondItem="TmD-it-Oee" secondAttribute="bottom" id="eUQ-SA-MOR"/>
-                <constraint firstAttribute="trailing" secondItem="frx-wz-3n8" secondAttribute="trailing" constant="4" id="rkb-48-FPT"/>
+                <constraint firstAttribute="trailing" secondItem="D6a-f1-mPS" secondAttribute="trailing" constant="4" id="oEK-I6-YkZ"/>
+                <constraint firstItem="D6a-f1-mPS" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Shs-Gd-W9e" secondAttribute="trailing" constant="8" id="swi-nb-PmJ"/>
+                <constraint firstAttribute="bottom" secondItem="D6a-f1-mPS" secondAttribute="bottom" constant="4" id="tKJ-md-iG7"/>
                 <constraint firstItem="Rtp-Ce-5Aw" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="u4p-Bn-JXS"/>
-                <constraint firstAttribute="trailing" secondItem="5aj-uE-NFD" secondAttribute="trailing" constant="4" id="wdI-YV-Gup"/>
+                <constraint firstAttribute="trailing" secondItem="5aj-uE-NFD" secondAttribute="trailing" constant="8" id="wdI-YV-Gup"/>
                 <constraint firstItem="TmD-it-Oee" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="z4c-3Q-Cb5"/>
             </constraints>
             <size key="customSize" width="186" height="165"/>
